Fix spacings

--- a/main/css/main.css
+++ b/main/css/main.css
@@ -136,13 +136,16 @@ footer a:not(.nav-link) {
     padding-bottom: 10px !important; }
   .avatar {
     margin-top: -10px; }
-  .about-section {
-    padding: 6.5rem 5rem 2rem !important; }
-  .skills-section,
-  .work-experience-section,
-  .education-section,
-  .contant-section {
-    padding: 1.5rem 5rem 2rem !important; }
+  .news-section {
+    display: none;
+  }
+  .progress, .conf-img, .conferences-section .card a {
+    display: none;
+  }
   .page-break {
     padding-top: 5rem;
     page-break-before: always; } }
+  [data-aos] {
+      opacity: 1 !important;
+      transform: translate(0) scale(1) !important;
+  }
